test/conformance/chainsaw/cleanup/v2beta1/validation/no-user-info-in-match/cleanuppolicy-with-subjects.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterCleanupPolicy
metadata:
  name: cleanuppolicy
spec:
  match:
    any:
      - resources:
          kinds:
            - Pod
        subjects:
          - kind: User
            name: chip
  schedule: '* * * * *'
