test/conformance/chainsaw/cleanup/v2beta1/validation/no-user-info-in-match/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: no-user-info-in-match
spec:
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cleanuppolicy-with-subjects.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cleanuppolicy-with-roles.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cleanuppolicy-with-clusterroles.yaml
